// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable allows custom loader 1`] = `
<div class="datatable">
  <div data-elm="wrapper" class="datatable__wrapper">
    <div data-elm="filter" class="datatable__filter"><input type="text" placeholder="Filter records" data-elm="input" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div data-elm="screen" class="datatable__screen">
      <div data-elm="loading" class="datatable__loading" name="datatable">
        <p>loading...</p>
      </div>
      <table cellspacing="0" cellpadding="0" data-elm="content" class="datatable__content">
        <thead data-elm="head" class="datatable__head">
          <tr>
            <th scope="col" data-elm="column" data-sortable="true" class="datatable__column datatable__column--sortable"><span data-elm="column-text" class="datatable__column-text">ID</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
            <th scope="col" data-elm="column" data-sortable="true" data-last="true" class="datatable__column datatable__column--sortable datatable__column--last"><span data-elm="column-text" class="datatable__column-text">Value</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
          </tr>
        </thead>
        <tbody></tbody>
      </table>
    </div>
    <nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">No records</span> <a disabled="disabled" href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul data-elm="plist" class="datatable__plist"></ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable allows custom loader 2`] = `
<div class="datatable">
  <div data-elm="wrapper" class="datatable__wrapper">
    <div data-elm="filter" class="datatable__filter"><input type="text" placeholder="Filter records" data-elm="input" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div data-elm="screen" class="datatable__screen">
      <div data-elm="loading" class="datatable__loading" name="datatable" style="display: none;">
        <p>loading...</p>
      </div>
      <table cellspacing="0" cellpadding="0" data-elm="content" class="datatable__content">
        <thead data-elm="head" class="datatable__head">
          <tr>
            <th scope="col" data-elm="column" data-sortable="true" class="datatable__column datatable__column--sortable"><span data-elm="column-text" class="datatable__column-text">ID</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
            <th scope="col" data-elm="column" data-sortable="true" data-last="true" class="datatable__column datatable__column--sortable datatable__column--last"><span data-elm="column-text" class="datatable__column-text">Value</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
          </tr>
        </thead>
        <tbody>
          <tr data-elm="row" class="datatable__row">
            <td data-elm="cell" data-last-row="true" class="datatable__cell datatable__cell--last-row">id</td>
            <td data-elm="cell" data-last-column="true" data-last-row="true" class="datatable__cell datatable__cell--last-column datatable__cell--last-row">key</td>
          </tr>
        </tbody>
      </table>
    </div>
    <nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">
    Showing <span>the last record</span> of 1 records
      </span> <a disabled="disabled" href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul data-elm="plist" class="datatable__plist">
        <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" data-active="true" class="datatable__plink datatable__plink--active">1</a></li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable allows disableLoader 1`] = `
<div class="datatable">
  <div data-elm="wrapper" class="datatable__wrapper">
    <div data-elm="filter" class="datatable__filter"><input type="text" placeholder="Filter records" data-elm="input" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div data-elm="screen" class="datatable__screen">
      <!---->
      <table cellspacing="0" cellpadding="0" data-elm="content" class="datatable__content">
        <thead data-elm="head" class="datatable__head">
          <tr>
            <th scope="col" data-elm="column" data-sortable="true" class="datatable__column datatable__column--sortable"><span data-elm="column-text" class="datatable__column-text">ID</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
            <th scope="col" data-elm="column" data-sortable="true" data-last="true" class="datatable__column datatable__column--sortable datatable__column--last"><span data-elm="column-text" class="datatable__column-text">Value</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
          </tr>
        </thead>
        <tbody>
          <tr data-elm="row" class="datatable__row">
            <td data-elm="cell" class="datatable__cell">1</td>
            <td data-elm="cell" data-last-column="true" class="datatable__cell datatable__cell--last-column">value z (id-1)</td>
          </tr>
          <tr data-elm="row" data-odd="true" class="datatable__row datatable__row--odd">
            <td data-elm="cell" class="datatable__cell">2</td>
            <td data-elm="cell" data-last-column="true" class="datatable__cell datatable__cell--last-column">value y (id-2)</td>
          </tr>
          <tr data-elm="row" class="datatable__row">
            <td data-elm="cell" data-last-row="true" class="datatable__cell datatable__cell--last-row">3</td>
            <td data-elm="cell" data-last-column="true" data-last-row="true" class="datatable__cell datatable__cell--last-column datatable__cell--last-row">value x (id-3)</td>
          </tr>
        </tbody>
      </table>
    </div>
    <nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">
    Showing <span>1 – 3</span> of 3 records
      </span> <a disabled="disabled" href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul data-elm="plist" class="datatable__plist">
        <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" data-active="true" class="datatable__plink datatable__plink--active">1</a></li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable allows pagination 1`] = `
<div class="datatable">
  <div data-elm="wrapper" class="datatable__wrapper">
    <div data-elm="filter" class="datatable__filter"><input type="text" placeholder="Filter records" data-elm="input" class="datatable__input">
      <!---->
    </div>
    <nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">
    Showing <span>1 – 3</span> of 3 records
      </span> <a disabled="disabled" href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul data-elm="plist" class="datatable__plist">
        <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" data-active="true" class="datatable__plink datatable__plink--active">1</a></li>
      </ul>
    </nav>
    <div data-elm="screen" class="datatable__screen">
      <div data-elm="loading" class="datatable__loading" style="display: none;"><svg viewBox="0 0 105 105" xmlns="http://www.w3.org/2000/svg" fill="#fff" width="40px">
          <circle cx="12.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="0s" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="52.5" r="12.5" fill-opacity=".5">
            <animate attributeName="fill-opacity" begin="100ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="300ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="600ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="800ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="400ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="700ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="500ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="200ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
        </svg></div>
      <table cellspacing="0" cellpadding="0" data-elm="content" class="datatable__content">
        <thead data-elm="head" class="datatable__head">
          <tr>
            <th scope="col" data-elm="column" data-sortable="true" class="datatable__column datatable__column--sortable"><span data-elm="column-text" class="datatable__column-text">ID</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
            <th scope="col" data-elm="column" data-sortable="true" data-last="true" class="datatable__column datatable__column--sortable datatable__column--last"><span data-elm="column-text" class="datatable__column-text">Value</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
          </tr>
        </thead>
        <tbody>
          <tr data-elm="row" class="datatable__row">
            <td data-elm="cell" class="datatable__cell">1</td>
            <td data-elm="cell" data-last-column="true" class="datatable__cell datatable__cell--last-column">value z (id-1)</td>
          </tr>
          <tr data-elm="row" data-odd="true" class="datatable__row datatable__row--odd">
            <td data-elm="cell" class="datatable__cell">2</td>
            <td data-elm="cell" data-last-column="true" class="datatable__cell datatable__cell--last-column">value y (id-2)</td>
          </tr>
          <tr data-elm="row" class="datatable__row">
            <td data-elm="cell" data-last-row="true" class="datatable__cell datatable__cell--last-row">3</td>
            <td data-elm="cell" data-last-column="true" data-last-row="true" class="datatable__cell datatable__cell--last-column datatable__cell--last-row">value x (id-3)</td>
          </tr>
        </tbody>
      </table>
    </div>
    <nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">
    Showing <span>1 – 3</span> of 3 records
      </span> <a disabled="disabled" href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul data-elm="plist" class="datatable__plist">
        <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" data-active="true" class="datatable__plink datatable__plink--active">1</a></li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable allows paginationSide 1`] = `
<div class="datatable">
  <div data-elm="wrapper" class="datatable__wrapper">
    <div data-elm="filter" class="datatable__filter"><input type="text" placeholder="Filter records" data-elm="input" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div data-elm="screen" class="datatable__screen">
      <div data-elm="loading" class="datatable__loading" style="display: none;"><svg viewBox="0 0 105 105" xmlns="http://www.w3.org/2000/svg" fill="#fff" width="40px">
          <circle cx="12.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="0s" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="52.5" r="12.5" fill-opacity=".5">
            <animate attributeName="fill-opacity" begin="100ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="300ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="600ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="800ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="400ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="700ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="500ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="200ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
        </svg></div>
      <table cellspacing="0" cellpadding="0" data-elm="content" class="datatable__content">
        <thead data-elm="head" class="datatable__head">
          <tr>
            <th scope="col" data-elm="column" data-sortable="true" class="datatable__column datatable__column--sortable"><span data-elm="column-text" class="datatable__column-text">ID</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
            <th scope="col" data-elm="column" data-sortable="true" data-last="true" class="datatable__column datatable__column--sortable datatable__column--last"><span data-elm="column-text" class="datatable__column-text">Value</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
          </tr>
        </thead>
        <tbody>
          <tr data-elm="row" class="datatable__row">
            <td data-elm="cell" class="datatable__cell">1</td>
            <td data-elm="cell" data-last-column="true" class="datatable__cell datatable__cell--last-column">value z (id-1)</td>
          </tr>
          <tr data-elm="row" data-odd="true" class="datatable__row datatable__row--odd">
            <td data-elm="cell" data-last-row="true" class="datatable__cell datatable__cell--last-row">2</td>
            <td data-elm="cell" data-last-column="true" data-last-row="true" class="datatable__cell datatable__cell--last-column datatable__cell--last-row">value y (id-2)</td>
          </tr>
        </tbody>
      </table>
    </div>
    <nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">
    Showing <span>1 – 2</span> of 26 records
      </span> <a disabled="disabled" href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul data-elm="plist" class="datatable__plist">
        <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" data-active="true" class="datatable__plink datatable__plink--active">1</a></li>
        <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" class="datatable__plink">2</a></li>
        <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" class="datatable__plink">3</a></li>
        <li data-elm="pitem" class="datatable__pitem"><a disabled="disabled" href="#" data-elm="plink" class="datatable__plink">...</a></li>
        <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" class="datatable__plink">11</a></li>
        <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" class="datatable__plink">12</a></li>
        <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" class="datatable__plink">13</a></li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable handles loading exception 1`] = `
<div class="datatable">
  <div data-elm="wrapper" class="datatable__wrapper">
    <div data-elm="filter" class="datatable__filter"><input type="text" placeholder="Filter records" data-elm="input" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div data-elm="screen" class="datatable__screen">
      <div data-elm="loading" class="datatable__loading" name="datatable">
        <p>loading...</p>
      </div>
      <table cellspacing="0" cellpadding="0" data-elm="content" class="datatable__content">
        <thead data-elm="head" class="datatable__head">
          <tr>
            <th scope="col" data-elm="column" data-sortable="true" class="datatable__column datatable__column--sortable"><span data-elm="column-text" class="datatable__column-text">ID</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
            <th scope="col" data-elm="column" data-sortable="true" data-last="true" class="datatable__column datatable__column--sortable datatable__column--last"><span data-elm="column-text" class="datatable__column-text">Value</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
          </tr>
        </thead>
        <tbody></tbody>
      </table>
    </div>
    <nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">No records</span> <a disabled="disabled" href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul data-elm="plist" class="datatable__plist"></ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable handles loading exception 2`] = `
<div class="datatable">
  <div data-elm="wrapper" class="datatable__wrapper">
    <div data-elm="filter" class="datatable__filter"><input type="text" placeholder="Filter records" data-elm="input" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div data-elm="screen" class="datatable__screen">
      <div data-elm="loading" class="datatable__loading" name="datatable" style="display: none;">
        <p>loading...</p>
      </div>
      <table cellspacing="0" cellpadding="0" data-elm="content" class="datatable__content">
        <thead data-elm="head" class="datatable__head">
          <tr>
            <th scope="col" data-elm="column" data-sortable="true" class="datatable__column datatable__column--sortable"><span data-elm="column-text" class="datatable__column-text">ID</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
            <th scope="col" data-elm="column" data-sortable="true" data-last="true" class="datatable__column datatable__column--sortable datatable__column--last"><span data-elm="column-text" class="datatable__column-text">Value</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
          </tr>
        </thead>
        <tbody></tbody>
      </table>
    </div>
    <nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">No records</span> <a disabled="disabled" href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul data-elm="plist" class="datatable__plist"></ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable keeps original items 1`] = `
<div class="datatable">
  <div data-elm="wrapper" class="datatable__wrapper">
    <div data-elm="filter" class="datatable__filter"><input type="text" placeholder="Filter records" data-elm="input" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div data-elm="screen" class="datatable__screen">
      <div data-elm="loading" class="datatable__loading" style="display: none;"><svg viewBox="0 0 105 105" xmlns="http://www.w3.org/2000/svg" fill="#fff" width="40px">
          <circle cx="12.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="0s" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="52.5" r="12.5" fill-opacity=".5">
            <animate attributeName="fill-opacity" begin="100ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="300ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="600ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="800ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="400ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="700ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="500ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="200ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
        </svg></div>
      <table cellspacing="0" cellpadding="0" data-elm="content" class="datatable__content">
        <thead data-elm="head" class="datatable__head">
          <tr>
            <th scope="col" data-elm="column" class="datatable__column"><span data-elm="column-text" class="datatable__column-text">Dot-chaining field</span></th>
            <th scope="col" data-elm="column" data-last="true" class="datatable__column datatable__column--last"><span data-elm="column-text" class="datatable__column-text">Plain field</span></th>
          </tr>
        </thead>
        <tbody>
          <tr data-elm="row" class="datatable__row">
            <td data-elm="cell" data-last-row="true" class="datatable__cell datatable__cell--last-row">YO</td>
            <td data-elm="cell" data-last-column="true" data-last-row="true" class="datatable__cell datatable__cell--last-column datatable__cell--last-row">lowercase me</td>
          </tr>
        </tbody>
      </table>
    </div>
    <nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">
    Showing <span>the last record</span> of 1 records
      </span> <a disabled="disabled" href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul data-elm="plist" class="datatable__plist">
        <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" data-active="true" class="datatable__plink datatable__plink--active">1</a></li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable shows loader 1`] = `
<div class="datatable">
  <div data-elm="wrapper" class="datatable__wrapper">
    <div data-elm="filter" class="datatable__filter"><input type="text" placeholder="Filter records" data-elm="input" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div data-elm="screen" class="datatable__screen">
      <div data-elm="loading" class="datatable__loading" name="datatable"><svg viewBox="0 0 105 105" xmlns="http://www.w3.org/2000/svg" fill="#fff" width="40px">
          <circle cx="12.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="0s" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="52.5" r="12.5" fill-opacity=".5">
            <animate attributeName="fill-opacity" begin="100ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="300ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="600ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="800ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="400ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="700ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="500ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="200ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
        </svg></div>
      <table cellspacing="0" cellpadding="0" data-elm="content" class="datatable__content">
        <thead data-elm="head" class="datatable__head">
          <tr>
            <th scope="col" data-elm="column" data-sortable="true" class="datatable__column datatable__column--sortable"><span data-elm="column-text" class="datatable__column-text">ID</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
            <th scope="col" data-elm="column" data-sortable="true" data-last="true" class="datatable__column datatable__column--sortable datatable__column--last"><span data-elm="column-text" class="datatable__column-text">Value</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
          </tr>
        </thead>
        <tbody></tbody>
      </table>
    </div>
    <nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">No records</span> <a disabled="disabled" href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul data-elm="plist" class="datatable__plist"></ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable shows loader 2`] = `
<div class="datatable">
  <div data-elm="wrapper" class="datatable__wrapper">
    <div data-elm="filter" class="datatable__filter"><input type="text" placeholder="Filter records" data-elm="input" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div data-elm="screen" class="datatable__screen">
      <div data-elm="loading" class="datatable__loading" name="datatable" style="display: none;"><svg viewBox="0 0 105 105" xmlns="http://www.w3.org/2000/svg" fill="#fff" width="40px">
          <circle cx="12.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="0s" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="52.5" r="12.5" fill-opacity=".5">
            <animate attributeName="fill-opacity" begin="100ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="300ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="600ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="800ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="400ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="700ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="500ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="200ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
        </svg></div>
      <table cellspacing="0" cellpadding="0" data-elm="content" class="datatable__content">
        <thead data-elm="head" class="datatable__head">
          <tr>
            <th scope="col" data-elm="column" data-sortable="true" class="datatable__column datatable__column--sortable"><span data-elm="column-text" class="datatable__column-text">ID</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
            <th scope="col" data-elm="column" data-sortable="true" data-last="true" class="datatable__column datatable__column--sortable datatable__column--last"><span data-elm="column-text" class="datatable__column-text">Value</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
          </tr>
        </thead>
        <tbody>
          <tr data-elm="row" class="datatable__row">
            <td data-elm="cell" data-last-row="true" class="datatable__cell datatable__cell--last-row">id</td>
            <td data-elm="cell" data-last-column="true" data-last-row="true" class="datatable__cell datatable__cell--last-column datatable__cell--last-row">key</td>
          </tr>
        </tbody>
      </table>
    </div>
    <nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">
    Showing <span>the last record</span> of 1 records
      </span> <a disabled="disabled" href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul data-elm="plist" class="datatable__plist">
        <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" data-active="true" class="datatable__plink datatable__plink--active">1</a></li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable works with async data 1`] = `
<div class="datatable">
  <div data-elm="wrapper" class="datatable__wrapper">
    <div data-elm="filter" class="datatable__filter"><input type="text" placeholder="Filter records" data-elm="input" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div data-elm="screen" class="datatable__screen">
      <div data-elm="loading" class="datatable__loading"><svg viewBox="0 0 105 105" xmlns="http://www.w3.org/2000/svg" fill="#fff" width="40px">
          <circle cx="12.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="0s" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="52.5" r="12.5" fill-opacity=".5">
            <animate attributeName="fill-opacity" begin="100ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="300ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="600ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="800ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="400ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="700ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="500ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="200ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
        </svg></div>
      <table cellspacing="0" cellpadding="0" data-elm="content" class="datatable__content">
        <thead data-elm="head" class="datatable__head">
          <tr>
            <th scope="col" data-elm="column" data-sortable="true" class="datatable__column datatable__column--sortable"><span data-elm="column-text" class="datatable__column-text">ID</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
            <th scope="col" data-elm="column" data-sortable="true" data-last="true" class="datatable__column datatable__column--sortable datatable__column--last"><span data-elm="column-text" class="datatable__column-text">Value</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
          </tr>
        </thead>
        <tbody>
          <tr data-elm="row" class="datatable__row">
            <td data-elm="cell" class="datatable__cell">id-1</td>
            <td data-elm="cell" data-last-column="true" class="datatable__cell datatable__cell--last-column">value z (id-1)</td>
          </tr>
          <tr data-elm="row" data-odd="true" class="datatable__row datatable__row--odd">
            <td data-elm="cell" class="datatable__cell">id-2</td>
            <td data-elm="cell" data-last-column="true" class="datatable__cell datatable__cell--last-column">value y (id-2)</td>
          </tr>
          <tr data-elm="row" class="datatable__row">
            <td data-elm="cell" data-last-row="true" class="datatable__cell datatable__cell--last-row">id-3</td>
            <td data-elm="cell" data-last-column="true" data-last-row="true" class="datatable__cell datatable__cell--last-column datatable__cell--last-row">value x (id-3)</td>
          </tr>
        </tbody>
      </table>
    </div>
    <nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">
    Showing <span>1 – 3</span> of 3 records
      </span> <a disabled="disabled" href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul data-elm="plist" class="datatable__plist">
        <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" data-active="true" class="datatable__plink datatable__plink--active">1</a></li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable works with empty data 1`] = `
<div class="datatable">
  <div data-elm="wrapper" class="datatable__wrapper">
    <div data-elm="filter" class="datatable__filter"><input type="text" placeholder="Filter records" data-elm="input" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div data-elm="screen" class="datatable__screen">
      <div data-elm="loading" class="datatable__loading" style="display: none;"><svg viewBox="0 0 105 105" xmlns="http://www.w3.org/2000/svg" fill="#fff" width="40px">
          <circle cx="12.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="0s" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="52.5" r="12.5" fill-opacity=".5">
            <animate attributeName="fill-opacity" begin="100ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="300ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="600ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="800ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="400ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="700ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="500ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="200ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
        </svg></div>
      <table cellspacing="0" cellpadding="0" data-elm="content" class="datatable__content">
        <thead data-elm="head" class="datatable__head">
          <tr>
            <th scope="col" data-elm="column" data-sortable="true" class="datatable__column datatable__column--sortable"><span data-elm="column-text" class="datatable__column-text">ID</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
            <th scope="col" data-elm="column" data-sortable="true" data-last="true" class="datatable__column datatable__column--sortable datatable__column--last"><span data-elm="column-text" class="datatable__column-text">Value</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
          </tr>
        </thead>
        <tbody></tbody>
      </table>
    </div>
    <nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">No records</span> <a disabled="disabled" href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul data-elm="plist" class="datatable__plist"></ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable works with no columns 1`] = `
<div class="datatable">
  <div data-elm="wrapper" class="datatable__wrapper">
    <div data-elm="filter" class="datatable__filter"><input type="text" placeholder="Filter records" data-elm="input" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div data-elm="screen" class="datatable__screen">
      <div data-elm="loading" class="datatable__loading" style="display: none;"><svg viewBox="0 0 105 105" xmlns="http://www.w3.org/2000/svg" fill="#fff" width="40px">
          <circle cx="12.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="0s" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="52.5" r="12.5" fill-opacity=".5">
            <animate attributeName="fill-opacity" begin="100ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="300ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="600ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="800ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="400ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="700ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="500ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="200ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
        </svg></div>
      <table cellspacing="0" cellpadding="0" data-elm="content" class="datatable__content">
        <thead data-elm="head" class="datatable__head">
          <!---->
        </thead>
        <tbody>
          <tr data-elm="row" class="datatable__row"></tr>
          <tr data-elm="row" data-odd="true" class="datatable__row datatable__row--odd"></tr>
          <tr data-elm="row" class="datatable__row"></tr>
        </tbody>
      </table>
    </div>
    <nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">
    Showing <span>1 – 3</span> of 3 records
      </span> <a disabled="disabled" href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul data-elm="plist" class="datatable__plist">
        <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" data-active="true" class="datatable__plink datatable__plink--active">1</a></li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable works with sync data 1`] = `
<div class="datatable">
  <div data-elm="wrapper" class="datatable__wrapper">
    <div data-elm="filter" class="datatable__filter"><input type="text" placeholder="Filter records" data-elm="input" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div data-elm="screen" class="datatable__screen">
      <div data-elm="loading" class="datatable__loading" style="display: none;"><svg viewBox="0 0 105 105" xmlns="http://www.w3.org/2000/svg" fill="#fff" width="40px">
          <circle cx="12.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="0s" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="52.5" r="12.5" fill-opacity=".5">
            <animate attributeName="fill-opacity" begin="100ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="300ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="600ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="800ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="400ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="700ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="500ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="200ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
        </svg></div>
      <table cellspacing="0" cellpadding="0" data-elm="content" class="datatable__content">
        <thead data-elm="head" class="datatable__head">
          <tr>
            <th scope="col" data-elm="column" data-sortable="true" class="datatable__column datatable__column--sortable"><span data-elm="column-text" class="datatable__column-text">ID</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
            <th scope="col" data-elm="column" data-sortable="true" data-last="true" class="datatable__column datatable__column--sortable datatable__column--last"><span data-elm="column-text" class="datatable__column-text">Value</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
          </tr>
        </thead>
        <tbody>
          <tr data-elm="row" class="datatable__row">
            <td data-elm="cell" class="datatable__cell">id-1</td>
            <td data-elm="cell" data-last-column="true" class="datatable__cell datatable__cell--last-column">value z (id-1)</td>
          </tr>
          <tr data-elm="row" data-odd="true" class="datatable__row datatable__row--odd">
            <td data-elm="cell" data-last-row="true" class="datatable__cell datatable__cell--last-row">id-2</td>
            <td data-elm="cell" data-last-column="true" data-last-row="true" class="datatable__cell datatable__cell--last-column datatable__cell--last-row">value y (id-2)</td>
          </tr>
        </tbody>
      </table>
    </div>
    <nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">
    Showing <span>1 – 2</span> of 3 records
      </span> <a disabled="disabled" href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul data-elm="plist" class="datatable__plist">
        <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" data-active="true" class="datatable__plink datatable__plink--active">1</a></li>
        <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" class="datatable__plink">2</a></li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable works with sync data 2`] = `
<div class="datatable">
  <div data-elm="wrapper" class="datatable__wrapper">
    <div data-elm="filter" class="datatable__filter"><input type="text" placeholder="Filter records" data-elm="input" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div data-elm="screen" class="datatable__screen">
      <div data-elm="loading" class="datatable__loading" style="display: none;"><svg viewBox="0 0 105 105" xmlns="http://www.w3.org/2000/svg" fill="#fff" width="40px">
          <circle cx="12.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="0s" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="52.5" r="12.5" fill-opacity=".5">
            <animate attributeName="fill-opacity" begin="100ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="300ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="600ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="800ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="400ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="700ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="500ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="200ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
        </svg></div>
      <table cellspacing="0" cellpadding="0" data-elm="content" class="datatable__content">
        <thead data-elm="head" class="datatable__head">
          <tr>
            <th scope="col" data-elm="column" data-sortable="true" class="datatable__column datatable__column--sortable"><span data-elm="column-text" class="datatable__column-text">ID</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
            <th scope="col" data-elm="column" data-sortable="true" data-last="true" class="datatable__column datatable__column--sortable datatable__column--last"><span data-elm="column-text" class="datatable__column-text">Value</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
          </tr>
        </thead>
        <tbody></tbody>
      </table>
    </div>
    <nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">No records</span> <a disabled="disabled" href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext" disabled="disabled"><span aria-hidden="true">»</span></a>
      <ul data-elm="plist" class="datatable__plist"></ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable works with sync data using function 1`] = `
<div class="datatable">
  <div data-elm="wrapper" class="datatable__wrapper">
    <div data-elm="filter" class="datatable__filter"><input type="text" placeholder="Filter records" data-elm="input" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div data-elm="screen" class="datatable__screen">
      <div data-elm="loading" class="datatable__loading"><svg viewBox="0 0 105 105" xmlns="http://www.w3.org/2000/svg" fill="#fff" width="40px">
          <circle cx="12.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="0s" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="52.5" r="12.5" fill-opacity=".5">
            <animate attributeName="fill-opacity" begin="100ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="300ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="600ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="800ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="400ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="700ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="500ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="200ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
        </svg></div>
      <table cellspacing="0" cellpadding="0" data-elm="content" class="datatable__content">
        <thead data-elm="head" class="datatable__head">
          <tr>
            <th scope="col" data-elm="column" data-sortable="true" class="datatable__column datatable__column--sortable"><span data-elm="column-text" class="datatable__column-text">ID</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
            <th scope="col" data-elm="column" data-sortable="true" data-last="true" class="datatable__column datatable__column--sortable datatable__column--last"><span data-elm="column-text" class="datatable__column-text">Value</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
          </tr>
        </thead>
        <tbody>
          <tr data-elm="row" class="datatable__row">
            <td data-elm="cell" class="datatable__cell">id-1</td>
            <td data-elm="cell" data-last-column="true" class="datatable__cell datatable__cell--last-column">value z (id-1)</td>
          </tr>
          <tr data-elm="row" data-odd="true" class="datatable__row datatable__row--odd">
            <td data-elm="cell" class="datatable__cell">id-2</td>
            <td data-elm="cell" data-last-column="true" class="datatable__cell datatable__cell--last-column">value y (id-2)</td>
          </tr>
          <tr data-elm="row" class="datatable__row">
            <td data-elm="cell" data-last-row="true" class="datatable__cell datatable__cell--last-row">id-3</td>
            <td data-elm="cell" data-last-column="true" data-last-row="true" class="datatable__cell datatable__cell--last-column datatable__cell--last-row">value x (id-3)</td>
          </tr>
        </tbody>
      </table>
    </div>
    <nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">
    Showing <span>1 – 3</span> of 3 records
      </span> <a disabled="disabled" href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul data-elm="plist" class="datatable__plist">
        <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" data-active="true" class="datatable__plink datatable__plink--active">1</a></li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable works with vue-i18n 1`] = `
<div class="datatable">
  <div data-elm="wrapper" class="datatable__wrapper">
    <div data-elm="filter" class="datatable__filter"><input type="text" placeholder="teible.filter" data-elm="input" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div data-elm="screen" class="datatable__screen">
      <div data-elm="loading" class="datatable__loading" style="display: none;"><svg viewBox="0 0 105 105" xmlns="http://www.w3.org/2000/svg" fill="#fff" width="40px">
          <circle cx="12.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="0s" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="52.5" r="12.5" fill-opacity=".5">
            <animate attributeName="fill-opacity" begin="100ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="300ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="600ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="12.5" r="12.5">
            <animate attributeName="fill-opacity" begin="800ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="52.5" r="12.5">
            <animate attributeName="fill-opacity" begin="400ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="12.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="700ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="52.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="500ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
          <circle cx="92.5" cy="92.5" r="12.5">
            <animate attributeName="fill-opacity" begin="200ms" dur="1s" values="1;.2;1" calcMode="linear" repeatCount="indefinite"></animate>
          </circle>
        </svg></div>
      <table cellspacing="0" cellpadding="0" data-elm="content" class="datatable__content">
        <thead data-elm="head" class="datatable__head">
          <!---->
        </thead>
        <tbody>
          <tr data-elm="row" class="datatable__row"></tr>
          <tr data-elm="row" data-odd="true" class="datatable__row datatable__row--odd"></tr>
        </tbody>
      </table>
    </div>
    <nav data-elm="pagination" class="datatable__pagination"><span data-elm="ptext" class="datatable__ptext">
    teible.showing <span>1 – 2</span> teible.total-3
      </span> <a disabled="disabled" href="#" aria-label="Previous" data-elm="plink" data-previous="" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a href="#" aria-label="Next" data-elm="plink" data-pnext="" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul data-elm="plist" class="datatable__plist">
        <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" data-active="true" class="datatable__plink datatable__plink--active">1</a></li>
        <li data-elm="pitem" class="datatable__pitem"><a href="#" data-elm="plink" class="datatable__plink">2</a></li>
      </ul>
    </nav>
  </div>
</div>
`;
